--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../Test_JS/script.js"></script>
 </head>
 <body>
     <h1>Hi!</h1>
-    <script src="../Test_JS/script.js"></script>
+    <script src="../Test_JS/JS/script.js"></script>
 </body>
 </html>
