--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi!</h1>
-    <script src="../Test_JS/JS/script.js"></script>
+    <h1>Задача 1</h1>
+    <button onclick="buttonClick()">Нажми на меня</button>
+    <span id="elem">Это span с текстом.</span>
+    <script src="../Test_JS/JS/script_new.js"></script>
 </body>
 </html>
